system/themes/flexible/src/main.css
/* ... */
/* Tablet */
@media (max-width:991px) {
	#header,#left {
		width:743px;
	}
	#container {
		width:auto;
	}
	#main,#left {
		float:none;
		margin:0 auto;
	}
	#left {
		margin-bottom:18px;
	}
	#footer {
		width:745px;
	}
	.collapsible h1 {
		margin:1px 1px 0 !important;
		border-radius:3px !important;
		border-bottom:1px solid #fff;
		position:relative;
		cursor:pointer;
	}
	.collapsible h1:after {
		content:"";
		display:block;
		width:16px;
		height:16px;
		position:absolute;
		top:4px;
		right:6px;
		background:url("images/arrows.png") left top no-repeat;
	}
	.collapsible_area {
		display:none;
	}
	.collapsible.xpnd h1 {
		border-radius:3px 3px 0 0 !important;
		border-bottom:0;
	}
	.collapsible.xpnd h1:after {
		background-position:left bottom;
	}
	.collapsible.xpnd .collapsible_area {
		display:block;
	}
	#tl_navigation .tl_level_2 li {
		min-width:150px;
		margin:1px 18px 6px 0;
		display:inline-block;
	}
}

/* Handheld */
@media (max-width:767px) {
	.popup #container {
		width:auto;
	}
	#header,#left,#main,#footer {
		width:auto;
		margin-left:10px;
		margin-right:10px;
	}
	#footer {
		padding-bottom:18px;
	}
	#tmenu {
		line-height:2;
		text-align:left;
	}
	.header_home,.header_user,.header_preview,.header_logout {
		margin-left:0;
		margin-right:15px;
	}
	div.tl_tbox,div.tl_box,fieldset.tl_tbox > div,fieldset.tl_box > div {
		position:relative;
	}
	.tl_header,.tl_content,.tl_content.indent,.tl_listing {
		width:auto;
	}
	.tl_content_left {
		width:100%;
		float:none;
	}
	table.tl_listing {
		width:100%;
	}
	.tl_listing_container {
		margin-left:10px;
		margin-right:10px;
	}
	.showColumns th, .showColumns td {
		display:block;
	}
	.showColumns th:empty {
		display:none;
	}
	.tl_label {
		white-space:normal;
	}
	.list_view .tl_listing img.theme_preview {
		display:none;
	}
	.tl_listing .tl_left {
		-moz-box-sizing:border-box;
		-webkit-box-sizing:border-box;
		box-sizing:border-box;
		max-width:-webkit-calc(100% - 36px);
		max-width:calc(100% - 36px);
	}
	.tl_search .tl_select {
		width:102px;
	}
	.tl_subpanel {
		float:none;
		position:relative;
		padding:3px 6px;
	}
	.tl_filter strong {
		display:none;
	}
	.tl_filter .tl_select {
		display:block;
		-moz-box-sizing:border-box;
		-webkit-box-sizing:border-box;
		box-sizing:border-box;
		width:-webkit-calc(100% - 6px);
		width:calc(100% - 6px);
	}
	.tl_submit_panel {
		float:right;
	}
	input.tl_submit {
		margin-top:3px;
		margin-bottom:3px;
		padding-left:6px !important;
		padding-right:7px !important;
	}
	.tl_formbody_edit {
		padding-left:10px;
		padding-right:10px;
	}
	#tl_tablewizard {
		width:430px;
	}
	.tl_listwizard .tl_text {
		width:-webkit-calc(100% - 54px);
		width:calc(100% - 54px);
	}
	.tl_metawizard .tl_text {
		width:100%;
	}
	.tl_metawizard_new .tl_select {
		width:40%;
	}
	.tl_optionwizard .tl_text_2 {
		width:100%;
	}
	#tl_buttons {
		line-height:2;
	}
	#tl_breadcrumb li {
		padding:3px;
	}
	#tl_versions {
		display:none;
	}
	.tl_version_panel .tl_select {
		width:136px;
	}
	#manager {
		margin-left:10px;
		margin-right:10px;
	}
	.tl_modulewizard .tl_select {
		width:100px;
	}
	#paste_hint,.sort_hint {
		display:none;
	}
	#tl_maintenance_cache table {
		width:100%;
	}
	#tl_maintenance_cache tr th:last-child,#tl_maintenance_cache tr td:last-child {
		display:none;
	}
	.mod_repository table th, .mod_repository table td {
		display:block;
		width:100% !important;
		-moz-box-sizing:border-box;
		-webkit-box-sizing:border-box;
		box-sizing:border-box;
	}
	.mod_repository table tr.title th {
		overflow:hidden;
	}
	.tl_file_list .ellipsis {
		padding-right:10px;
	}
	#tl_navigation .tl_level_2 li {
		min-width:110px;
	}
}

/* Table wizard fix */
@media (max-width:479px) {
	#tl_tablewizard {
		width:272px;
	}
}

